--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "test": "ava src/**/*.test.js -v -r babel-polyfill -r babel-register"
   },
   "devDependencies": {
-    "ava": "0.11.0",
-    "babel-core": "^6.3.15",
-    "babel-eslint": "5.0.0-beta10",
-    "babel-loader": "^6.2.0",
-    "babel-polyfill": "6.5.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.0.0",
-    "babel-register": "6.5.2",
+    "ava": "0.15.2",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-register": "6.9.0",
     "css-loader": "0.23.1",
-    "eslint": "^2.0.0",
-    "eslint-loader": "1.2.1",
-    "eslint-plugin-react": "^3.11.3",
-    "express": "^4.13.3",
+    "eslint": "^2.13.0",
+    "eslint-loader": "1.3.0",
+    "eslint-plugin-react": "^5.2.2",
+    "express": "^4.14.0",
     "nyan-progress-webpack-plugin": "1.1.4",
-    "style-loader": "0.13.0",
-    "webpack": "^1.12.9",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0"
+    "style-loader": "0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   }
 }
