--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,4 @@
 {
-  "presets": ["react", "es2015"],
-  "env": {
-    "development": {
-      "presets": ["react-hmre"]
-    }
-  }
+  "presets": ["es2015", "stage-0", "react"],
+  "plugins": ["react-hot-loader/babel", "add-module-exports"]
 }
