--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-boilerplate",
   "version": "1.0.0",
   "scripts": {
-    "build": "rm -rf public && NODE_ENV=production webpack --config webpack.config.prod.js",
+    "build": "NODE_ENV=production webpack -p --progress --config webpack/index.js",
     "lint": "eslint src",
-    "start": "node server.dev.js",
+    "start": "node index.js",
     "test": "ava"
   },
   "devDependencies": {
@@ -12,25 +12,26 @@
     "babel-core": "^6.9.1",
     "babel-eslint": "6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "0.2.1",
     "babel-polyfill": "6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.9.0",
-    "css-loader": "0.23.1",
     "eslint": "^2.13.0",
     "eslint-loader": "1.3.0",
     "eslint-plugin-react": "^5.2.2",
-    "express": "^4.14.0",
     "nyan-progress-webpack-plugin": "1.1.4",
-    "style-loader": "0.13.1",
+    "react-hot-loader": "^3.0.0-beta.1",
     "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
+    "css-loader": "0.23.1",
+    "express": "^4.14.0",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "style-loader": "0.13.1"
   },
   "ava": {
     "files": [
