--- a/package.json
+++ b/package.json
@@ -8,29 +8,27 @@
     "test": "ava"
   },
   "devDependencies": {
-    "ava": "0.15.2",
-    "babel-core": "^6.9.1",
-    "babel-eslint": "6.0.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "0.2.1",
-    "babel-polyfill": "6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "6.5.0",
-    "babel-register": "6.9.0",
-    "eslint": "^2.13.0",
-    "eslint-loader": "1.3.0",
-    "eslint-plugin-react": "^5.2.2",
-    "nyan-progress-webpack-plugin": "1.1.4",
-    "react-hot-loader": "^3.0.0-beta.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.7.0"
+    "ava": "0.16.0",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "7.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "6.16.0",
+    "babel-register": "6.16.3",
+    "eslint": "^3.8.1",
+    "eslint-loader": "1.6.0",
+    "eslint-plugin-react": "^6.4.1",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "webpack": "^2.1.0-beta.20",
+    "webpack-dev-server": "2.1.0-beta.0"
   },
   "dependencies": {
-    "css-loader": "0.23.1",
+    "css-loader": "0.25.0",
     "express": "^4.14.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "style-loader": "0.13.1"
   },
   "ava": {
